--- a/bio/index.html
+++ b/bio/index.html
@@ -106,7 +106,11 @@ His work lies at the learning, control, and design of autonomous systems with an
     </header>
 
     <!-- raw HTML omitted -->
-<p><img src="https://bec.umich.edu/um-tri/intelligent-and-automatic-motion-planning-for-self-driving-vehicles/" alt="Poster"> <img src="https://Shbing.github.io/research/topic_4_planning/TRI_Poster_V2.jpg" alt="Poster"></p>
+<!-- raw HTML omitted -->
+<figure>
+    <img src="https://Shbing.github.io/research/TRI_Poster_V2.jpg" height="400"/> 
+</figure>
+
 <p>Shaobing Xu is an <a href="https://www.svm.tsinghua.edu.cn/essay/80/1944.html">assistant professor</a> at the School of Vehicle and Mobility (SVM), <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. He was an <a href="https://www.me.engin.umich.edu/people/faculty/shaobing-xu">assistant research scientist</a> (1/2019 -2/2022) and a postdoctoral researcher (10/2016-12/2018) working with Prof. <a href="https://huei.engin.umich.edu/">Huei Peng</a> at the Department of Mechanical Engineering <a href="https://me.engin.umich.edu/">(ME)</a> and <a href="https://mcity.umich.edu/">Mcity</a>, University of Michigan, Ann Arbor.  He received his Ph.D. degree in Mechanical Engineering from Tsinghua University, Beijing, China, in 2016.</p>
 <p>His work lies at the learning, control, and design of autonomous systems with an emphasis on connected automated vehicles (CAVs). During his time at Michigan, he was committed to developing autonomous cars, sensor-level augmented reality (AR), and V2X systems at Mcity. He led 4 research projects with total funding of $1.42M dollars sponsored by TRI, Mcity, Denso, and Version.</p>
 <p>His research resulted in 24 peer-reviewed journal papers and 10 conference papers. The citation number in Google scholar is &gt;900 with an H-index of 18. In 2021, he received the National Science Fund for Outstanding Young Scholars from NSFC. He also received the Best Paper Award of the 14th International Symposium on Advanced Vehicle Control (first author, 3 out of 230 papers, 2018), NSK Sino-Japan Outstanding Paper in Mechanical Engineering (first author, 2015), the Excellent Ph.D. Dissertation Award of Tsinghua University (2016), and National Scholarship for three-time in 2008, 2009, and 2014.</p>
