--- a/bio/index.html
+++ b/bio/index.html
@@ -11,11 +11,11 @@
 
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content=""/>
-<meta name="twitter:description" content="Shaobing Xu is an assistant professor at the School of Vehicle and Mobility (SVM), Tsinghua University. He was an assistant research scientist (1/2019 -2/2022) and a postdoctoral researcher (10/2016-12/2018) working with Prof. Huei Peng at the Department of Mechanical Engineering (ME) and Mcity, University of Michigan, Ann Arbor. He received his Ph.D. degree in Mechanical Engineering from Tsinghua University, Beijing, China, in 2016.
+<meta name="twitter:description" content="Bio Shaobing Xu is an assistant professor at the School of Vehicle and Mobility (SVM), Tsinghua University. He was an assistant research scientist (1/2019 -2/2022) and a postdoctoral researcher (10/2016-12/2018) working with Prof. Huei Peng at the Department of Mechanical Engineering (ME) and Mcity, University of Michigan, Ann Arbor. He received his Ph.D. degree in Mechanical Engineering from Tsinghua University, Beijing, China, in 2016.
 His work lies at the learning, control, and design of autonomous systems with an emphasis on connected automated vehicles (CAVs)."/>
 
     <meta property="og:title" content="" />
-<meta property="og:description" content="Shaobing Xu is an assistant professor at the School of Vehicle and Mobility (SVM), Tsinghua University. He was an assistant research scientist (1/2019 -2/2022) and a postdoctoral researcher (10/2016-12/2018) working with Prof. Huei Peng at the Department of Mechanical Engineering (ME) and Mcity, University of Michigan, Ann Arbor. He received his Ph.D. degree in Mechanical Engineering from Tsinghua University, Beijing, China, in 2016.
+<meta property="og:description" content="Bio Shaobing Xu is an assistant professor at the School of Vehicle and Mobility (SVM), Tsinghua University. He was an assistant research scientist (1/2019 -2/2022) and a postdoctoral researcher (10/2016-12/2018) working with Prof. Huei Peng at the Department of Mechanical Engineering (ME) and Mcity, University of Michigan, Ann Arbor. He received his Ph.D. degree in Mechanical Engineering from Tsinghua University, Beijing, China, in 2016.
 His work lies at the learning, control, and design of autonomous systems with an emphasis on connected automated vehicles (CAVs)." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://Shbing.github.io/bio/" />
@@ -105,12 +105,8 @@ His work lies at the learning, control, and design of autonomous systems with an
       <h1></h1>
     </header>
 
-    <!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
-<figure>
-    <img src="https://Shbing.github.io/research/TRI_Poster_V2.jpg" height="400"/> 
-</figure>
-
+    <h3 id="bio">Bio</h3>
+<p><img src="https://Shbing.github.io/images/TRI_Poster_V2.jpg" alt="Poster"></p>
 <p>Shaobing Xu is an <a href="https://www.svm.tsinghua.edu.cn/essay/80/1944.html">assistant professor</a> at the School of Vehicle and Mobility (SVM), <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. He was an <a href="https://www.me.engin.umich.edu/people/faculty/shaobing-xu">assistant research scientist</a> (1/2019 -2/2022) and a postdoctoral researcher (10/2016-12/2018) working with Prof. <a href="https://huei.engin.umich.edu/">Huei Peng</a> at the Department of Mechanical Engineering <a href="https://me.engin.umich.edu/">(ME)</a> and <a href="https://mcity.umich.edu/">Mcity</a>, University of Michigan, Ann Arbor.  He received his Ph.D. degree in Mechanical Engineering from Tsinghua University, Beijing, China, in 2016.</p>
 <p>His work lies at the learning, control, and design of autonomous systems with an emphasis on connected automated vehicles (CAVs). During his time at Michigan, he was committed to developing autonomous cars, sensor-level augmented reality (AR), and V2X systems at Mcity. He led 4 research projects with total funding of $1.42M dollars sponsored by TRI, Mcity, Denso, and Version.</p>
 <p>His research resulted in 24 peer-reviewed journal papers and 10 conference papers. The citation number in Google scholar is &gt;900 with an H-index of 18. In 2021, he received the National Science Fund for Outstanding Young Scholars from NSFC. He also received the Best Paper Award of the 14th International Symposium on Advanced Vehicle Control (first author, 3 out of 230 papers, 2018), NSK Sino-Japan Outstanding Paper in Mechanical Engineering (first author, 2015), the Excellent Ph.D. Dissertation Award of Tsinghua University (2016), and National Scholarship for three-time in 2008, 2009, and 2014.</p>
